liens vers tous les articles d'une rubrique : - corrections sur chaîne de langue - on aligne à droite

--- a/squelettes/css/styles_ecran/commun.css
+++ b/squelettes/css/styles_ecran/commun.css
@@ -699,8 +699,9 @@ dd.iconeZoomImage {
 /* Divers */
 
 p.lienTous {
-	background: url(../../images/fleche.png) no-repeat left center;
-	padding-left: 16px;
+	text-align: right;
+	background: url(../../images/fleche.png) no-repeat right center;
+	padding-right: 16px;
 }
 
 p.pagination {
